--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -16,6 +16,12 @@ spec:
       targetPort: rest
       protocol: TCP
       name: rest
+    {{- if eq .Values.phoebusservice "olog" }}
+    - port: 3000
+      targetPort: http
+      protocol: TCP
+      name: http
+    {{- end }}
     # {{- if .Values.service.http.enable }}
     # - port: {{ .Values.service.http.port }}
     #   targetPort: http
