--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -41,6 +41,16 @@ spec:
     - host: {{ .host | quote }}
       http:
         paths:
+        {{- if eq .Values.phoebusservice "olog" }}
+
+          - path: /web
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ include "phoebus-services-chart.fullname" . }}
+                port:
+                  number: 8080
+        {{- end }}
           {{- range .paths }}
           - path: {{ .path }}
             {{- if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
