--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -47,7 +47,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: {{ include "phoebus-services-chart.fullname" . }}
+                name: {{ $fullName }}
                 port:
                   number: 8080
         {{- end }}
