--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -50,7 +50,14 @@ spec:
                 name: {{ $fullName }}
                 port:
                   number: 8080
-        {{- end }}
+          - path: /logbook
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ $fullName }}
+                port:
+                  number: 80
+        {{- else }}
           {{- range .paths }}
           - path: {{ .path }}
             {{- if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
@@ -71,5 +78,7 @@ spec:
               servicePort: {{ $svcPort }}
               {{- end }}
           {{- end }}
+      {{- end }}
+
     {{- end }}
 {{- end }}
