--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -50,7 +50,7 @@ spec:
                 name: {{ $fullName }}
                 port:
                   number: 3000
-          - path: /logbook
+          - path: /
             pathType: Prefix
             backend:
               service:
