--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -76,6 +76,8 @@ spec:
           env:
             - name: REACT_APP_BASE_URL
               value: "http://localhost:8080/Olog"
+            - name: PUBLIC_URL
+              value: "/web"
           ports:
             - name: http
               containerPort: 3000
