--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -21,6 +21,10 @@ spec:
       targetPort: http
       protocol: TCP
       name: http
+    - port: 8181
+      targetPort: ologrest
+      protocol: TCP
+      name: ologrest 
     {{- end }}
     # {{- if .Values.service.http.enable }}
     # - port: {{ .Values.service.http.port }}
