--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -72,7 +72,7 @@ spec:
         - name: {{ .Chart.Name }}-web
           
           image: "{{ .Values.image.webolog }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          imagePullPolicy: Always #{{ .Values.image.pullPolicy }}
           env:
             - name: REACT_APP_BASE_URL
               value: {{quote (printf "http://%s/Olog" (index .Values.ingress.hosts 0).host) }}
