adding react ws url

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -78,6 +78,8 @@ spec:
               value: {{quote (printf "http://%s/Olog" (index .Values.ingress.hosts 0).host) }}
             - name: PUBLIC_URL
               value: "/web"
+            - name: BACKEND_URL
+              value: "/web" 
             - name: REACT_APP_WS_URL
               value: {{quote (printf "ws://%s/web" (index .Values.ingress.hosts 0).host) }}
 
