--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -50,6 +50,13 @@ spec:
                 name: {{ $fullName }}
                 port:
                   number: 3000
+          - path: /ws
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ $fullName }}
+                port:
+                  number: 3000
           - path: /
             pathType: Prefix
             backend:
