adding react ws url

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -77,10 +77,8 @@ spec:
             - name: REACT_APP_BASE_URL
               value: {{quote (printf "http://%s/Olog" (index .Values.ingress.hosts 0).host) }}
             - name: PUBLIC_URL
-              value: "/web"
-            - name: BACKEND_URL
-              value: "/web" 
-            - name: REACT_APP_WS_URL
+              value: {{quote (printf "http://%s/web" (index .Values.ingress.hosts 0).host) }}
+            - name: WS_URL
               value: {{quote (printf "ws://%s/web" (index .Values.ingress.hosts 0).host) }}
 
           ports:
