--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -78,7 +78,7 @@ spec:
               value: {{quote (printf "http://%s/Olog" (index .Values.ingress.hosts 0).host) }}
             - name: PUBLIC_URL
               value: {{quote (printf "http://%s/web" (index .Values.ingress.hosts 0).host) }}
-            - name: WS_URL
+            - name: REACT_APP_WS_URL
               value: {{quote (printf "ws://%s/web" (index .Values.ingress.hosts 0).host) }}
 
           ports:
