--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -87,7 +87,7 @@ spec:
             - name: WDS_SOCKET_PORT
               value: "0"
             - name: REACT_APP_LEVEL_VALUES
-              value: "Urgent,Suggestion,Info,Request,Problem"
+              value: "[\"Urgent\",\"Suggestion\",\"Info\",\"Request\",\"Problem\"]"
             - name: REACT_APP_DEFAULT_LEVEL
               value: "Info"
           ports:
