--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -279,8 +279,11 @@ data:
       # Comma separated list of origins allowed to do CORS requests.
       # Defaults to http://localhost:3000 (NodeJS development), but must be augmented
       # with the origin(s) on which the web front-end is deployed.
-      #cors.allowed.origins=http://localhost:3000
-
+      
+    {{- if .Values.cors.origins }}
+      cors.allowed.origins={{.Values.cors.origins}}
+    {{- end }}
+    
       ################## File upload and request size limits ##################
       spring.servlet.multipart.max-file-size=50MB
       spring.servlet.multipart.max-request-size=100MB
