--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -435,6 +435,11 @@ data:
       com.sun.mail.smtp.level = WARNING
 
       org.apache.kafka.level = INFO
+      org.phoebus.email/mailhost={{.Values.email.host}}
+      org.phoebus.email/mailport={{.Values.email.port}}
+      org.phoebus.email/username={{.Values.email.username}}
+      org.phoebus.email/password={{.Values.email.password}}
+      org.phoebus.applications.alarm/automated_email_sender={{.Release.Namespace}} Alarm Notifier
 
       org.phoebus.applications.alarm.level = INFO
       com.cosylab.epics.caj.level = DEBUG
