--- a/values.yaml
+++ b/values.yaml
@@ -126,3 +126,15 @@ epicsConfiguration:
 staticIP:
 gitRepoConfig:
   url:
+
+email:
+  from: "phoebus@localhost"
+  to: "phoebus@localhost"
+  smtp:
+    host: smtp.lnf.infn.it
+    port: 25
+    user: ""
+    password: ""
+    tls: false
+    starttls: false
+    auth: false
