--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -35,6 +35,12 @@ data:
 
     # Size of the thread pool for message and command loggers. Two threads per topic/configuration are required
     thread_pool_size=4
+    org.phoebus.pv.ca/addr_list={{ .Values.epicsConfiguration.ca_addr_list }}
+    org.phoebus.pv.ca/auto_addr_list=false
+
+    org.phoebus.pv.pva/epics_pva_auto_addr_list=false
+    org.phoebus.pva/pva_addr_list={{ .Values.epicsConfiguration.pva_addr_list }}
+    # org.phoebus.pva/pva_auto_addr_list=false
 
     ############################## REST Logging ###############################
     # DEBUG level will log all requests and responses to and from the REST end points
