--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -201,7 +201,7 @@ data:
       # User search pattern, e.g. uid={0},ou=People. No default value as LDAP environment may not
       # support user search by pattern.
       ldap.user.dn.pattern={{ .Values.ldap.user.dn.pattern }}
-      {{- else }}
+      ## {{- else }}
       ############## LDAP - Embedded ##############
       embedded_ldap.enabled = true
       embedded_ldap.urls = ldap://localhost:8389/dc=olog,dc=local
