--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -106,16 +106,19 @@ spec:
             - name: rest
               containerPort: 4810
               protocol: TCP
+            {{- else if eq .Values.phoebusservice "olog" }}
+            - name: https
+              containerPort: 8181
+              protocol: TCP
+            - name: http
+              containerPort: 8080
+              protocol: TCP
             {{- else }}
             - name: rest
               containerPort: 8080
               protocol: TCP
             {{- end }}
-          {{- if eq .Values.phoebusservice "olog" }}
-            - name: https
-              containerPort: 8181
-              protocol: TCP
-          {{- end }}
+          
             
           stdin: true
           tty: true  
