--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -26,14 +26,22 @@ spec:
   {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
   ingressClassName: {{ .Values.ingress.className }}
   {{- end }}
-  {{- if .Values.ingress.tls }}
+  {{- if or .Values.ingress.tls .Values.secure }}
   tls:
+    {{- if .Values.ingress.tls }}
     {{- range .Values.ingress.tls }}
     - hosts:
         {{- range .hosts }}
         - {{ . | quote }}
         {{- end }}
       secretName: {{ .secretName }}
+    {{- end }}
+    {{- else if .Values.secure }}
+    {{- range .Values.ingress.hosts }}
+    - hosts:
+        - {{ .host | quote }}
+      secretName: {{ $fullName }}-tls
+    {{- end }}
     {{- end }}
   {{- end }}
   rules:
@@ -48,11 +56,8 @@ spec:
               service:
                 name: {{ $fullName }}
                 port:
-                  {{- if and $.Values.ingress $.Values.ingress.tls }}
-                  number: 8181
-                  {{- else }}
+                  {{- /* Use HTTP port 8080 for TLS termination at ingress, HTTPS port 8181 only for end-to-end TLS */ -}}
                   number: 8080
-                  {{- end }}
         {{- else }}
           {{- range .paths }}
           - path: {{ .path }}
