Fix ingress backend compatibility for Kubernetes < 1.19
- Add proper serviceName/servicePort format for older Kubernetes versions
- Maintain service/port format for Kubernetes 1.19+
- Fixes 'port name or number is required' error on older clusters
- Ensures compatibility across all Kubernetes versions

--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -59,11 +59,16 @@ spec:
           - path: /
             pathType: Prefix
             backend:
+              {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
               service:
                 name: {{ $fullName }}
                 port:
                   {{- /* Use HTTP port 8080 for TLS termination at ingress, HTTPS port 8181 only for end-to-end TLS */ -}}
                   number: 8080
+              {{- else }}
+              serviceName: {{ $fullName }}
+              servicePort: 8080
+              {{- end }}
         {{- else }}
           {{- range .paths }}
           - path: {{ .path }}
