Fix genSignedCert parameter order for hostname validation
- Use correct parameter order: genSignedCert name ipAddresses dnsNames validity ca
- Pass nil for IP addresses and hosts list for DNS names
- Fixes 'error parsing ip' error when hostnames are passed as IP parameter
- Resolves TLS certificate generation failure in Helm template

--- a/templates/tls-secret.yaml
+++ b/templates/tls-secret.yaml
@@ -5,7 +5,7 @@
 {{- range .Values.ingress.hosts }}
 {{- $hosts = append $hosts .host }}
 {{- end }}
-{{- $cert := genSignedCert $fullName $hosts (list) 365 $ca }}
+{{- $cert := genSignedCert $fullName nil $hosts 365 $ca }}
 ---
 apiVersion: v1
 kind: Secret
