--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -57,13 +57,14 @@ spec:
         paths:
         {{- if eq $.Values.phoebusservice "olog" }}
           - path: /
+            {{- if and (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
             pathType: Prefix
+            {{- end }}
             backend:
               {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
               service:
                 name: {{ $fullName }}
                 port:
-                  {{- /* Use HTTP port 8080 for TLS termination at ingress, HTTPS port 8181 only for end-to-end TLS */ -}}
                   number: 8080
               {{- else }}
               serviceName: {{ $fullName }}
