--- a/values.yaml
+++ b/values.yaml
@@ -41,6 +41,7 @@ service:
 
 ingress:
   enabled: false
+  enableHttp: true  # Enable HTTP-only ingress route alongside HTTPS
   className: ""
   annotations: {}
     # kubernetes.io/ingress.class: nginx
