--- a/values.yaml
+++ b/values.yaml
@@ -39,6 +39,9 @@ service:
     port: 8081
   loglevel: "INFO"
 
+# Enable TLS termination and secure configurations
+secure: false
+
 ingress:
   enabled: false
   enableHttp: true  # Enable HTTP-only ingress route alongside HTTPS
